plugins {
	id 'java'
	id 'org.springframework.boot' version '4.1.0'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'Hampouch'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-h2console'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-flyway'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	//lombok
	compileOnly 'org.projectlombok:lombok'
	testCompileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'

	//H2
	runtimeOnly 'com.h2database:h2'

	//MySQL
	runtimeOnly 'com.mysql:mysql-connector-j'
	runtimeOnly 'org.flywaydb:flyway-mysql'

	//jwt
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

	// Testcontainers — 실 MySQL 8.0 컨테이너 계층. H2(MODE=MySQL)가 통과시키는 MySQL 고유 거부를 잡는다.
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	// 2.x에서 모듈 좌표가 testcontainers-* 로 바뀌었다(1.x의 org.testcontainers:mysql 은 BOM에 없어 버전 해석 실패).
	testImplementation 'org.testcontainers:testcontainers-junit-jupiter'
	testImplementation 'org.testcontainers:testcontainers-mysql'

	testImplementation 'org.springframework.boot:spring-boot-starter-security-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-validation-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	// challenge 리포지토리 테스트(@DataJpaTest) 슬라이스
	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	//google ID 토큰 검증
	implementation 'com.google.api-client:google-api-client:2.7.0'

	//s3
	implementation platform('software.amazon.awssdk:bom:2.28.11')
	implementation 'software.amazon.awssdk:s3'

	//actuator - 운영 health check용
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'

	//sentry - 운영 미처리 예외 추적. Boot 4 전용 스타터이고, sentry-logback 은 스타터에 안 딸려 와서 명시(log.error 를 이벤트로 수집)
	implementation 'io.sentry:sentry-spring-boot-4-starter:8.52.0'
	implementation 'io.sentry:sentry-logback:8.52.0'
	//springdoc-openapi(Swagger UI) — 3.x가 Boot 4 계열, 2.x는 Boot 3.5까지다
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.1.0'
}

tasks.named('test') {
	useJUnitPlatform {
		excludeTags 'mysql'
	}
	systemProperty 'user.timezone', 'Asia/Seoul'
}

def verifyDocker = tasks.register('verifyDocker', Exec) {
	commandLine 'docker', 'info'
}

tasks.register('mysqlTest', Test) {
	description = 'Runs tests against a real MySQL container.'
	group = 'verification'
	testClassesDirs = sourceSets.test.output.classesDirs
	classpath = sourceSets.test.runtimeClasspath
	dependsOn verifyDocker
	shouldRunAfter tasks.named('test')
	useJUnitPlatform {
		includeTags 'mysql'
	}
	systemProperty 'user.timezone', 'Asia/Seoul'
}

tasks.withType(JavaCompile).configureEach {
	options.compilerArgs << '-parameters'
}
